# soui4js

./: .gitignore  .gitmodules  CMakeLists.txt  license.txt  products.md  readme.md  run_host.bat  run_host_x64.bat  run_wizard.bat  soui4js.sln
__cmake/: global.cmake  internal_utils.cmake
bin64/: main.js
bin64/uires/: uires.idx
bin64/uires/uidef/: init.xml
bin64/uires/values/: string.xml
copy_files/: CMakeLists.txt
depends/openssl_1.1.1d/win32/include/openssl/: opensslconf.h
depends/openssl_1.1.1d/x64/include/openssl/: opensslconf.h
depends/quickjs/include/: quickjs-libc.h  quickjs.h
depends/quickjs/lib_deb/x64/: qjs  qjsc
depends/quickjs/lib_mac/arm64/: libquickjs.dylib  qjs  qjsc
depends/quickjs/lib_mac/x64/: libquickjs.dylib  qjs  qjsc
depends/quickjs/lib_win/x64/: libquickjs.lib
depends/quickjs/lib_win/x86/: libquickjs.lib
depends/soui4/components/: commask.h  commgr2.h
depends/soui4/config/: build.cfg  config.h
depends/soui4/include/SOUI/include/: SApp.h  SGuidDef.h  SInitGuid.h  SouiFactory.h  soui-version.h  soui_exp.h  souistd.h
depends/soui4/include/components/: com-cfg.h  commgr2.h
depends/soui4/include/components/resprovider-7zip/: zip7resprovider-param.h
depends/soui4/include/components/resprovider-zip/: zipresprovider-param.h
depends/soui4/include/config/: build.cfg  config.h
depends/soui4/include/swinx/include/: basetyps.h  class.h  commdlg.h  ctypes.h  fileapi.h  gdi.h  hook.h  imm.h  logdef.h  menu.h  mmsystem.h  oaidl.h  objidl.h  oleauto.h  oleidl.h  region.h  richedit.h  shellapi.h  shlobj.h  strapi.h  sysapi.h  tchar.h  unknwn.h  windows.h  winuser.h  wnd.h
depends/soui4/include/utilities/include/: com-loader.hpp  gdialpha.h  sdef.h  sguid.h  snew.h  soui_mem_wrapper.h  souicoll.h  utilities-def.h  utilities.h
depends/soui4/lib/x64/: soui4.lib  utilities4.lib
depends/soui4/lib/x86/: soui4.lib  utilities4.lib
depends/soui4/lib_deb/x64/: uieditor  uiviewer
depends/soui4/lib_mac/arm64/: libcairo.dylib  libhttpclient.dylib  libimgdecoder-stb.dylib  liblog4z.dylib  libmsftedit.dylib  librender-gdi.dylib  librender-skia.dylib  libresprovider-7zip.dylib  libresprovider-zip.dylib  libscriptmodule-lua.dylib  libsipcobject.dylib  libsoui4.dylib  libswinx.dylib  libtaskloop.dylib  libtranslator.dylib  libutilities4.dylib
depends/soui4/lib_mac/x64/: libcairo.dylib  libhttpclient.dylib  libimgdecoder-stb.dylib  liblog4z.dylib  libmsftedit.dylib  librender-gdi.dylib  librender-skia.dylib  libresprovider-7zip.dylib  libresprovider-zip.dylib  libsipcobject.dylib  libsoui4.dylib  libswinx.dylib  libtaskloop.dylib  libtranslator.dylib  libutilities4.dylib
depends/soui4/lib_win/Win32/: soui4.lib  utilities4.lib
depends/soui4/lib_win/X64/: soui4.lib  utilities4.lib
depends/soui4/lib_win/x64/: soui4.lib  utilities4.lib
depends/soui4/lib_win/x86/: soui4.lib  utilities4.lib
depends/soui4/soui/include/control/: SEdit.h
depends/soui4/soui/include/core/: SHostDialog.h  SHostMsgDef.h  STimerlineHandlerMgr.h
depends/soui4/soui/include/helper/: SDpiHelper.hpp  SDpiScale.h  SFunctor.hpp  SIpcParamHelper.hpp  STaskHandler.h  STimer.h  STimerGenerator.h
depends/soui4/soui/include/interface/: SObjFactory-i.h  STimer-i.h
depends/soui4/swinx/include/: commctrl.h  commdlg.h  ctypes.h  fileapi.h  imm.h  mmsystem.h  multimon.h  oleidl.h  shellapi.h  sysapi.h  windows.h  winuser.h  wnd.h
depends/soui4/utilities/include/: sdef.h
depends/swinx_1.0/include/: class.h  comcat.h  commdlg.h  ctrl_types.h  ctypes.h  fileapi.h  gdi.h  guiddef.h  hook.h  imm.h  initguid.h  menu.h  objbase.h  objidl.h  ole2.h  richedit.h  shellapi.h  shlobj.h  strapi.h  sysapi.h  tchar.h  textserv.h  windowsx.h  winerror.h  winnls.h  winuser.h
depends/ws/include/: ws-i.h
qjsbind/: CMakeLists.txt  jsarglist.h  jsclass.h  jsconstructor.h  jscontext.h  jsgfunc.h  jsmemfunc.h  jsmodule.h  jsnewvalue.h  jsproxy.h  jsruntime.h  jsvalue.h  qjsbind.cpp  qjsbind.h  qjsbind.vcxproj  qjsbind.vcxproj.filters
soui4js/: CMakeLists.txt  exp_soui.cpp  soui4js.cpp  soui4js.h  soui4js.rc  soui4js.vcxproj  stdafx.h
soui4js-host/: CMakeLists.txt  readme.txt  resource.h  soui4js-host.aps  soui4js-host.cpp  soui4js-host.rc  soui4js-host.vcxproj  stdafx.h
soui4js-host/js/: main.js
soui4js-host/js/uires/: uires.idx
soui4js-host/js/uires/uidef/: init.xml
soui4js-host/js/uires/values/: skin.xml  string.xml
soui4js-host/js/uires/xml/: dlg_main.xml
soui4js-host/res/: soui4js-host.icns
soui4js/exports/: SAttrStorage.h  SFuncSlot.h  exp_EvtHandlerProxy.h  exp_IAdapter.h  exp_IAnimation.h  exp_IApp.h  exp_IAttrStoarge.h  exp_ICtrls.h  exp_IEvt.h  exp_IHostWnd.h  exp_IHttpClient.h  exp_IImage.h  exp_IInterpolator.h  exp_ILogMgr.h  exp_IMenu.h  exp_IMenuEx.h  exp_INativeWnd.h  exp_INcPainter.h  exp_IObjRef.h  exp_IObject.h  exp_IResProvider.h  exp_IResProviderMgr.h  exp_ISkinObj.h  exp_ISouiFac.h  exp_IString.h  exp_ITimer.h  exp_ITranslatorMgr.h  exp_IValueAnimator.h  exp_IWindow.h  exp_IXml.h  exp_MsgHandlerProxy.h  exp_SAdapter.h  exp_SDropTarget.h  exp_SEventArg.h  exp_SFileOpenDlg.h  exp_SHostWnd.h  exp_SMatrix.h  exp_SMenu.h  exp_SRegKey.h  exp_SString.h  (+11 more)
utils/: CMakeLists.txt  TextDecoder.cpp  TextDecoder.h  base64.h  exp_base64.h  exp_md5.h  exp_utils.h  fileop.cpp  fileop.h  md5.cpp  md5.h  readme.txt  stdafx.h  sysapi.cpp  sysapi.h  urlcode.cpp  urlcode.h  utils.cpp  utils.rc  utils.vcxproj
wizard/: main.js  set_env.js
wizard/template/: main.js
wizard/template/uires/: R.js
wizard/template/uires/xml/: dlg_main.xml
wizard/uires/: uires.idx
wizard/uires/values/: skin.xml  string.xml
wizard/uires/xml/: dlg_main.xml
ws/: CMakeLists.txt
ws/cert/: server.crt  server.key
ws/include/: ws-i.h
ws/src/: Connection.cpp  Connection.h  ws.cpp  wsClient.cpp  wsClient.h  wsServer.cpp  wsServer.h
ws/test/: ClientTest.cpp  ClientTestJs.htm  ServerTest.cpp
ws4js/: CMakeLists.txt  WsClient.cpp  WsClient.h  WsLoader.cpp  WsLoader.h  WsSever.cpp  WsSever.h  cpp.hint  exp_ws.h  resource.h  stdafx.h  ws4js.cpp  ws4js.rc  ws4js.vcxproj
(+219 files in other folders)
